--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/activity_main_map_fragment"
-        android:name="com.tho.madridshops.fragment.MapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
