--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="detail_small_margin">8dp</dimen>
+    <dimen name="detail_view_text_size">12sp</dimen>
+    <dimen name="border_slim">1dp</dimen>
 </resources>
