--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,10 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="detail_small_margin">8dp</dimen>
+    <dimen name="detail_view_small_margin">8dp</dimen>
     <dimen name="detail_view_text_size">12sp</dimen>
+    <dimen name="marker_image_padding">8sp</dimen>
+    <dimen name="marker_text_size">10sp</dimen>
+    <dimen name="marker_text_margin">8dp</dimen>
     <dimen name="border_slim">1dp</dimen>
+    <dimen name="marker_small_margin">8dp</dimen>
 </resources>
