--- a/app/src/main/res/layout/activity_main_activities.xml
+++ b/app/src/main/res/layout/activity_main_activities.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tho.madridshops.activity.MainActivity">
+    tools:context="com.tho.madridshops.activity.ActivitiesMainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main_activities" />
 
 </android.support.design.widget.CoordinatorLayout>
