--- a/app/src/main/res/layout/content_main_shops.xml
+++ b/app/src/main/res/layout/content_main_shops.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.tho.madridshops.activity.MainActivity"
-    tools:showIn="@layout/activity_main"
+    tools:context="com.tho.madridshops.activity.ShopsMainActivity"
+    tools:showIn="@layout/activity_main_shops"
     android:orientation="vertical">
 
     <fragment
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/activity_main_list_fragment"
-        android:name="com.tho.madridshops.fragment.ListFragment"
+        android:name="com.tho.madridshops.fragment.ShopsListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
