--- a/app/src/main/res/layout/fragment_shops_list.xml
+++ b/app/src/main/res/layout/fragment_shops_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tho.madridshops.fragment.ListFragment">
+    tools:context="com.tho.madridshops.fragment.ShopsListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
