--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,28 +9,54 @@
     android:background="@color/colorPrimaryDark"
     tools:context="com.tho.madridshops.activity.MadridShopsApp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="208dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="@string/logo_s_app"
-        app:layout_constraintBottom_toTopOf="@+id/main_activity_activities_button"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <Button
+        android:id="@+id/main_activity_refresh_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_margin_slim"
+        android:layout_marginTop="@dimen/default_margin_slim"
+        android:text="@string/swipe_or_tap_to_refresh_data"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/swipe_container"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/activity_main_logo_max_width"
+        android:layout_height="@dimen/default_layout_null"
+        android:layout_marginBottom="@dimen/default_margin_slim"
+        android:layout_marginEnd="@dimen/default_margin_slim"
+        android:layout_marginStart="@dimen/default_margin_slim"
+        android:layout_marginTop="@dimen/default_margin_slim"
+        android:contentDescription="@string/logo_s_app"
+        app:layout_constraintBottom_toTopOf="@+id/main_activity_activities_button"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_activity_refresh_data"
+        app:layout_constraintWidth_max="200dp"
         app:srcCompat="@mipmap/mainlogo" />
 
     <ProgressBar
         android:id="@+id/activitiesProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="@dimen/default_margin_slim"
+        android:layout_marginEnd="@dimen/default_margin_slim"
+        android:layout_marginStart="@dimen/default_margin_slim"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/main_activity_activities_button"
         app:layout_constraintEnd_toEndOf="@+id/main_activity_activities_button"
@@ -40,7 +66,7 @@
 
     <Button
         android:id="@+id/main_activity_activities_button"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/default_layout_null"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/activities"
@@ -55,9 +81,9 @@
         android:id="@+id/shopsProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="@dimen/default_margin_slim"
+        android:layout_marginEnd="@dimen/default_margin_slim"
+        android:layout_marginStart="@dimen/default_margin_slim"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/main_activity_shops_button"
         app:layout_constraintEnd_toEndOf="@+id/main_activity_shops_button"
@@ -67,7 +93,7 @@
 
     <Button
         android:id="@+id/main_activity_shops_button"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/default_layout_null"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/shops"
