--- a/app/src/main/res/layout/activity_picasso.xml
+++ b/app/src/main/res/layout/activity_picasso.xml
@@ -10,23 +10,26 @@
 
     <ImageView
         android:id="@+id/img1"
+        android:contentDescription="@string/image_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        />
+        app:srcCompat="@android:drawable/ic_menu_report_image" />
 
     <ImageView
         android:id="@+id/img2"
+        android:contentDescription="@string/image_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        />
+        app:srcCompat="@android:drawable/ic_menu_report_image" />
 
     <ImageView
         android:id="@+id/img3"
+        android:contentDescription="@string/image_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        />
+        app:srcCompat="@android:drawable/ic_menu_report_image" />
 
 </LinearLayout>
